# NAI_PJATK

./: .gitignore  README.md
lab1/: main.cpp  readme.md
lab11/: CMakeLists.txt  main.cpp  myversion.cpp  readme.md
lab2/: main.cpp  readme.md
lab3/: main.cpp  readme.md
lab4/: CMakeLists.txt  main.cpp  readme.md
lab4/SampleOLD/: sample_geeksforgeeks.org.cpp
lab5/: DecisionTrees_Antoni_Ulenberg.ipynb  info.md
lab5-1/: main.cpp
lab7/: CMakeLists.txt  main.cpp  readme.md
lab7-py/: main.py
lab8/: CMakeLists.txt  instruction  main.cpp
lab9/: CMakeLists.txt  arucoMarkers.cpp  cameraCalibration.cpp  markerCreation.cpp  readme.md
